test/analyzer/input_programs/invalid_programs/program19.tea
x := class:
  y: 'hello'
  z: 'there'
end

a := new x()
# y is a field
a.y

# yo is NOT a field
a.yo
